# internal-platform-api

./: .gitignore  AI_CONTEXT.md  LICENSE  README.md  pyproject.toml  sonar-project.properties
.agents/: AI_CONTEXT.md
.github/workflows/: pipeline.yml
app/: main.py
app/api/v1/: environments.py
app/core/: config.py  database.py  exceptions.py  security.py
app/models/: __init__.py  deployment.py  environment.py  project.py  user.py
app/services/: deployments.py  projects.py
backend/: Dockerfile
backend/app/: main.py
backend/app/api/v1/: auth.py  deployments.py  environments.py  projects.py
backend/app/core/: config.py  exceptions.py  middleware.py  migrations.py
backend/app/repositories/: deployments.py  environments.py  projects.py  users.py
backend/app/services/: auth.py  deployments.py  email.py  environments.py  projects.py  provisioning.py
backend/tests/: conftest.py  test_config.py
backend/tests/api/: test_auth.py  test_cors.py  test_deployments_api.py  test_environments.py  test_projects.py
backend/tests/unit/: test_auth_service.py  test_deployments.py  test_email_service.py  test_provisioning.py
frontend/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
frontend/src/: index.html  karma.conf.js  styles.css
frontend/src/app/: app.config.ts
frontend/src/environments/: environment.prod.ts  environment.ts
scripts/: smoke_backend.py  smoke_e2e.py  smoke_frontend.py  smoke_test.py
terraform/: main.tf
tests/: conftest.py
tests/api/: test_health.py
tests/unit/: test_deployments.py
(+52 files in other folders)
